@@ -1,5 +1,5 @@
 /**
- *    Copyright 2009-2017 the original author or authors.
+ *    Copyright 2009-2019 the original author or authors.
  *
  *    Licensed under the Apache License, Version 2.0 (the "License");
  *    you may not use this file except in compliance with the License.
@@ -16,70 +16,55 @@
 package org.apache.ibatis.submitted.valueinmap;
 
 import java.io.Reader;
-import java.sql.Connection;
 import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 
+import org.apache.ibatis.BaseDataTest;
 import org.apache.ibatis.exceptions.PersistenceException;
 import org.apache.ibatis.io.Resources;
-import org.apache.ibatis.jdbc.ScriptRunner;
 import org.apache.ibatis.session.SqlSession;
 import org.apache.ibatis.session.SqlSessionFactory;
 import org.apache.ibatis.session.SqlSessionFactoryBuilder;
-import org.junit.Assert;
-import org.junit.BeforeClass;
-import org.junit.Test;
+import org.junit.jupiter.api.Assertions;
+import org.junit.jupiter.api.BeforeAll;
+import org.junit.jupiter.api.Test;
 
-public class ValueInMapTest {
+class ValueInMapTest {
 
   private static SqlSessionFactory sqlSessionFactory;
 
-  @BeforeClass
-  public static void setUp() throws Exception {
+  @BeforeAll
+  static void setUp() throws Exception {
     // create a SqlSessionFactory
-    Reader reader = Resources.getResourceAsReader("org/apache/ibatis/submitted/valueinmap/mybatis-config.xml");
-    sqlSessionFactory = new SqlSessionFactoryBuilder().build(reader);
-    reader.close();
+    try (Reader reader = Resources.getResourceAsReader("org/apache/ibatis/submitted/valueinmap/mybatis-config.xml")) {
+      sqlSessionFactory = new SqlSessionFactoryBuilder().build(reader);
+    }
 
     // populate in-memory database
-    SqlSession session = sqlSessionFactory.openSession();
-    Connection conn = session.getConnection();
-    reader = Resources.getResourceAsReader("org/apache/ibatis/submitted/valueinmap/CreateDB.sql");
-    ScriptRunner runner = new ScriptRunner(conn);
-    runner.setLogWriter(null);
-    runner.runScript(reader);
-    conn.close();
-    reader.close();
-    session.close();
+    BaseDataTest.runScript(sqlSessionFactory.getConfiguration().getEnvironment().getDataSource(),
+            "org/apache/ibatis/submitted/valueinmap/CreateDB.sql");
   }
 
   @Test // issue #165
-  public void shouldWorkWithAPropertyNamedValue() {
-    SqlSession sqlSession = sqlSessionFactory.openSession();
-    try {
-      Map<String, String> map = new HashMap<String, String>();
+  void shouldWorkWithAPropertyNamedValue() {
+    try (SqlSession sqlSession = sqlSessionFactory.openSession()) {
+      Map<String, String> map = new HashMap<>();
       map.put("table", "users");
       map.put("column", "name");
       map.put("value", "User1");
       Integer count = sqlSession.selectOne("count", map);
-      Assert.assertEquals(new Integer(1), count);
-    } finally {
-      sqlSession.close();
+      Assertions.assertEquals(Integer.valueOf(1), count);
     }
   }
 
-  @Test(expected=PersistenceException.class)
-  public void shouldWorkWithAList() {
-    SqlSession sqlSession = sqlSessionFactory.openSession();
-    try {
-      List<String> list = new ArrayList<String>();
+  @Test
+  void shouldWorkWithAList() {
+    try (SqlSession sqlSession = sqlSessionFactory.openSession()) {
+      List<String> list = new ArrayList<>();
       list.add("users");
-      Integer count = sqlSession.selectOne("count2",list);
-      Assert.assertEquals(new Integer(1), count);
-    } finally {
-      sqlSession.close();
+      Assertions.assertThrows(PersistenceException.class, () -> sqlSession.selectOne("count2",list));
     }
   }
 
